# systemc_code

full_adder/sysc/include/: full_adder.h
full_adder/sysc/src/: full_adder.cpp
half_adder/sysc/include/: half_adder.h
half_adder/sysc/src/: half_adder.cpp
half_adder/tester/: CMakeLists.txt  main.cpp  tester.h
